styles/Tabbed.module.scss
@use 'vars' as *;

$tab-height: 40px;
$tab-gap: 8px;

.tabs-container {
  margin-top: $tab-height + 3 * $tab-gap;
}

.tabs {
  width: 100vw;
  padding: $tab-gap $tab-gap / 2;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  size: 20pt;
  font-weight: bold;
  font-size: 1.2rem;
  line-height: 0;
  user-select: none;
  background: $main-bg-color;
  box-shadow: 0 1px 4px darken($main-bg-color, 2%);
  z-index: 10;
}

.tab {
  background: $bg-color-light;
  margin: 0 $tab-gap / 2;
  border-radius: $border-radius;
  flex-basis: 0;
  flex-grow: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  height: $tab-height;
  text-align: center;
  cursor: pointer;

  &.active {
    background: $bg-color-lighter;
    cursor: default;
  }

  &:not(.active):hover,
  &:not(.active):active {
    background: mix($bg-color-lighter, $bg-color-light);
  }
}

